--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^1.0.0-next.45",
 		"@sveltejs/kit": "^1.20.4",
-		"concurrently": "^8.2.2",
 		"svelte": "^4.0.5",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"express": "^4.17.1",
-		"fs": "*",
-		"cors": "*"
+
 	}
 }
